--- a/miniapp/app.json
+++ b/miniapp/app.json
@@ -1,21 +1,21 @@
 {
-  "pages":[ 
+  "pages": [
     "pages/index/index",
     "pages/indexMap/indexMap",
     "pages/choosepicture/choosepicture",
     "pages/showdetail/showdetail",
-    "pages/takepicture/takepicture"  
+    "pages/takepicture/takepicture"
   ],
-  "window":{
-    "backgroundTextStyle":"light",
+  "window": {
+    "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "水鸟识别",
-    "navigationBarTextStyle":"black"
+    "navigationBarTextStyle": "black"
   },
-  "tabBar":{
+  "tabBar": {
     "color": "#000000",
     "selectedColor": "#439057",
-    "list":[
+    "list": [
       {
         "pagePath": "pages/index/index",
         "text": "首页",
@@ -26,7 +26,7 @@
         "pagePath": "pages/takepicture/takepicture",
         "text": "拍照识别",
         "iconPath": "resources/take-picture.png",
-        "selectedIconPath":"resources/take-picture-fill.png"
+        "selectedIconPath": "resources/take-picture-fill.png"
       },
       {
         "pagePath": "pages/choosepicture/choosepicture",
@@ -34,7 +34,6 @@
         "iconPath": "resources/choose-picture.png",
         "selectedIconPath": "resources/choose-picture-fill.png"
       }
-      
     ]
   },
   "networkTimeout": {
@@ -42,5 +41,6 @@
     "connectSocket": 10000,
     "uploadFile": 10000,
     "downloadFile": 10000
-  }
+  },
+  "sitemapLocation": "sitemap.json"
 }
