--- a/app.json
+++ b/app.json
@@ -2,14 +2,13 @@
   "pages": [
     "pages/index/index",
     "pages/indexMap/indexMap",
-    "pages/choosepicture/choosepicture",
     "pages/showdetail/showdetail",
     "pages/success/success",
     "pages/aboutUs/aboutUs"
   ],
   "window": {
-    "navigationBarBackgroundColor": "#ffffff",
-    "navigationBarTextStyle": "black",
+    "navigationBarBackgroundColor": "#000000",
+    "navigationBarTextStyle": "white",
     "navigationBarTitleText": "水鸟识别",
     "backgroundColor": "#eeeeee",
     "backgroundTextStyle": "light",
