--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "pages": [
     "pages/index/index",
     "pages/indexMap/indexMap",
+    "pages/results/results",
     "pages/showdetail/showdetail",
     "pages/success/success",
     "pages/aboutUs/aboutUs"
