--- a/app.json
+++ b/app.json
@@ -8,8 +8,8 @@
     "pages/aboutUs/aboutUs"
   ],
   "window": {
-    "navigationBarBackgroundColor": "#000000",
-    "navigationBarTextStyle": "white",
+    "navigationBarBackgroundColor": "#ffffff",
+    "navigationBarTextStyle": "black",
     "navigationBarTitleText": "水鸟识别",
     "backgroundColor": "#eeeeee",
     "backgroundTextStyle": "light",
